--- a/admin/edit_product.html
+++ b/admin/edit_product.html
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary me-2">Lưu</button>
-                            <button type="submit" class="btn btn-danger">Xoá sản phẩm</button>
+                            <button type="button" class="btn btn-danger">Xoá sản phẩm</button>
                         </div>
                     </div>
                 </div>
