--- a/admin/product.html
+++ b/admin/product.html
@@ -86,13 +86,13 @@
                         <h6 class="mb-0">Danh sách sản phẩm</h6>
                     </div>
 
-                    <button id="deleteButton" class="btn btn-primary mb-3">Xoá</button>
+                    <button class="btn btn-primary mb-3">Xoá</button>
                     
                     <div class="table-responsive">
-                        <table id="productTable" class="table table-hover" style="width:100%">
+                        <table id="productTable" class="table table-hover table-bordered text-start align-middle mb-0">
                             <thead>
                                 <tr>
-                                    <th></th>
+                                    <th><input type="checkbox" class="form-check-input"></th>
                                     <th>ID</th>
                                     <th>Sản phẩm</th>
                                     <th>Danh mục</th>
@@ -104,7 +104,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td></td>
+                                    <td><input type="checkbox" class="form-check-input"></td>
                                     <td>1</td>
                                     <td>Bình hoa</td>
                                     <td>Trang trí</td>
@@ -116,7 +116,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td></td>
+                                    <td><input type="checkbox" class="form-check-input"></td>
                                     <td>2</td>
                                     <td>Cái ghế</td>
                                     <td>Trang trí</td>
@@ -128,7 +128,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td></td>
+                                    <td><input type="checkbox" class="form-check-input"></td>
                                     <td>3</td>
                                     <td>Cái bàn</td>
                                     <td>Trang trí</td>
@@ -175,13 +175,6 @@
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
     <script src="/js/drop-image.js"></script>
-
-    <!-- Datatables -->
-    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.bootstrap5.js"></script>
-    <script src="https://cdn.datatables.net/select/2.0.2/js/dataTables.select.js"></script>
-    <script src="https://cdn.datatables.net/select/2.0.2/js/select.dataTables.js"></script>
-    <script src="/js/datatables.js"></script>
 </body>
 
 </html>
