--- a/user/contact.html
+++ b/user/contact.html
@@ -113,7 +113,7 @@
               <div class="contact_info col-lg-4">
                 <div class="contact_info_area">
                   <div class="contact_info_title">Số điện thoại</div>
-                  <a href="" class="contact_info_text"> 0901131465 </a>
+                  <a href="tel:0901131465" class="contact_info_text"> 0901131465 </a>
                 </div>
               </div>
               <div class="contact_info col-lg-4">
@@ -135,7 +135,7 @@
                   </a>
                   <a href="">
                     <img
-                      src="/images/social_icon/tiktok_icon.svg"
+                      src="/images/social_icon/instagram_icon.svg"
                       alt="tiktok"
                     />
                   </a>
