--- a/admin/add_product.html
+++ b/admin/add_product.html
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary me-2">Tạo sản phẩm</button>
-                            <button type="submit" class="btn btn-outline-danger">Huỷ</button>
+                            <button type="button" class="btn btn-outline-danger">Huỷ</button>
                         </div>
                     </div>
                 </div>
