--- a/user/combo.html
+++ b/user/combo.html
@@ -92,10 +92,10 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <img src="/images/combo/b1.jpg">
+                <img src="/images/combo/concept-1.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 01</h2>
+                    <p>Mùa Xuân</p>
+                    <h2>Concept 01</h2>
                     <div class="combo_price">
                         <span class="current_prefix manual_price">100</span>
                         <span class="current_prefix sale_price">50</span>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/combo/b2.jpg">
+                <img src="/images/combo/concept-2.jpg">
                 <div class="content">
                     <p>design</p>
                     <h2>Slider 02</h2>
@@ -153,13 +153,13 @@
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
-                <img src="/images/combo/b1.jpg">
+                <img src="/images/combo/concept-1.jpg">
                 <div class="content">
-                    Name Slider
+                    Mùa Xuân
                 </div>
             </div>
             <div class="item">
-                <img src="/images/combo/b2.jpg">
+                <img src="/images/combo/concept-2.jpg">
                 <div class="content">
                     Name Slider
                 </div>
