--- a/user/index.html
+++ b/user/index.html
@@ -92,54 +92,14 @@
         <div class="banner_slider owl-carousel owl-theme">
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
+                    <img src="/images/banner/banner-1.png" alt="">
+                    <a href="category.html" class="banner_btn btn_white">Khám phá ngay</a>
                 </div>
             </div>
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_banner_slider">
-                <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_banner_slider">
-                <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
+                    <img src="/images/banner/banner-2.png" alt="">
+                    <a href="combo1.html" class="banner_btn btn_white">Khám phá ngay</a>
                 </div>
             </div>
         </div>
@@ -163,7 +123,7 @@
                         <div class="single_feature_slider">
                             <div class="row">
                                 <div class="feature_text col-lg-3">
-                                    <p>Premium Quality</p>
+                                    <p>Giá chỉ <span>10.000đ</span></p>
                                     <h3>Latest foam Sofa</h3>
                                     <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
@@ -210,7 +170,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="section_tittle">
-                        <h2>Sản phẩm <span>nổi bật</span></h2>
+                        <h2>Sản phẩm nổi bật</h2>
                     </div>
                 </div>
             </div>
@@ -396,7 +356,7 @@
     <section class="our_offer">
         <div class="container">
             <div class="offer_text">
-                <h2>Cùng chọn sản phẩm decor<br> <span>phù hợp</span> với bạn nhé.</h2>
+                <h2>Cùng <strong>chọn sản phẩm</strong> decor<br> phù hợp với bạn nhé.</h2>
             </div>
             <a href="category.html" class="custom_btn btn_white">Đến cửa hàng</a>
 
@@ -438,8 +398,8 @@
                         <div class="single_footer_part">
                             <h4>Our Contact</h4>
                             <ul class="list-unstyled">
-                                <li><a href="">deprop.contact@gmail.com</a></li>
-                                <li><a href="">0901131465</a></li>
+                                <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
+                                <li><a href="tel:0901131465">0901131465</a></li>
                                 <li><a>District 9, Ho Chi Minh city</a></li>
                             </ul>
                         </div>
@@ -502,7 +462,6 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/addtocart.js"></script>
-    <script src="/js/filter_sort.js"></script>
     <!-- extra js --> 
     <script src="/js/backtotop.js"></script>
     <script src="/js/loading.js"></script>
