--- a/user/policy.html
+++ b/user/policy.html
@@ -213,8 +213,8 @@
                         <div class="single_footer_part">
                             <h4>Our Contact</h4>
                             <ul class="list-unstyled">
-                                <li><a href="">deprop.contact@gmail.com</a></li>
-                                <li><a href="">0901131465</a></li>
+                                <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
+                                <li><a href="tel:0901131465">0901131465</a></li>
                                 <li><a>District 9, Ho Chi Minh city</a></li>
                             </ul>
                         </div>
